Fix animation-duration on mobile

--- a/assets/stylesheets/components/standard/progress_bars/_progress_bars-config.scss
+++ b/assets/stylesheets/components/standard/progress_bars/_progress_bars-config.scss
@@ -37,6 +37,10 @@ $c-progress-bars-percentage-margin-left: 50px;
   justify-content: center;
 }
 
+%c-progress-bars-hide-overflow-x {
+  overflow-x: hidden;
+}
+
 
 //------------------------------------------------------------------------------
 //                          Progress Bars Animations
@@ -57,6 +61,6 @@ $c-progress-bars-percentage-margin-left: 50px;
 }
 
 @keyframes c-progress-bars-infinite--pr {
-  0% { left: -100%; };
+  0% { left: -110%; };
   100% { left: 0; };
 }
